syntax = "proto3";

option csharp_namespace = "Discount.GRPC.Protos";

service DiscountProtoService {

	rpc GetDiscount(GetDiscountRequest) returns (CouponModel); // defision du service

	rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);

	rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);

	rpc DeleDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest{
	string  productName= 1; // represente la postion du parametre
}



message CouponModel{
	int32 id=1;
	string productName=2;
	string description=3;
	int32 amount=4;
}


message CreateDiscountRequest{
	CouponModel coupon=1;
}

message UpdateDiscountRequest{
	CouponModel coupon=1;
}

message DeleteDiscountRequest{
	string productName=1;
}

message DeleteDiscountResponse{
	bool success=1;
}